# GarmentQC

./: .gitignore  README.md  index.html  package-lock.json  package.json  template-1.xlsx  template-2.xlsx  vite.config.ts
.github/workflows/: windows-build.yml
src/: App.tsx  AppErrorBoundary.tsx  api.ts  features.css  main.tsx  report.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  export.rs  lib.rs  main.rs  models.rs
