[package]
name = "clothes-qa"
version = "0.1.1"
description = "Offline clothing quality inspection system"
authors = ["Clothes QA"]
edition = "2021"

[lib]
name = "clothes_qa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
anyhow = "1"
umya-spreadsheet = "2.3"
